samples/_failures_safe/1761416785_903901_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37e46eaa.c:182:1: error: expected ‘{’ at end of input
  182 | void graph_reset_visited(struct
      | ^~~~
